cmake_minimum_required (VERSION 3.0)

project(algospot)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG")

add_executable(CLOCKSYNC CLOCKSYNC/CLOCKSYNC.cpp)
add_executable(QUADTREE QUADTREE/QUADTREE.cpp)
add_executable(COINS COINS/COINS.cpp)
add_executable(BALLPAINTING BALLPAINTING/BALLPAINTING.cpp)
add_executable(FENCE FENCE/FENCE.cpp)
add_executable(FANMEETING FANMEETING/FANMEETING.cpp)
add_executable(JUMPGAME JUMPGAME/JUMPGAME.cpp)
add_executable(WILDCARD WILDCARD/WILDCARD.cpp)
add_executable(TRIANGLEPATH TRIANGLEPATH/TRIANGLEPATH.cpp)
add_executable(LIS LIS/LIS.cpp)
add_executable(JLIS JLIS/JLIS.cpp)
add_executable(PI PI/PI.cpp)
add_executable(QUANTIZE QUANTIZE/QUANTIZE.cpp)
add_executable(TILING2 TILING2/TILING2.cpp)
add_executable(TRIPATHCNT TRIPATHCNT/TRIPATHCNT.cpp)
add_executable(SNAIL SNAIL/SNAIL.cpp)
add_executable(ASYMTILING ASYMTILING/ASYMTILING.cpp)