cmake_minimum_required (VERSION 3.0)

project(uva)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG")

add_executable(11450 11450/11450.cpp)
add_executable(00507 00507/00507.cpp)
add_executable(answer 00507/answer.cpp)
add_executable(00108 00108/00108.cpp)
add_executable(10130 10130/10130.cpp)
add_executable(00674 00674/00674.cpp)
add_executable(10496 10496/10496.cpp)
add_executable(10943 10943/10943.cpp)
add_executable(10003 10003/10003.cpp)
add_executable(10911 10911/10911.cpp)
add_executable(11172 11172/11172.cpp)
add_executable(11498 11498/11498.cpp)
add_executable(11727 11727/11727.cpp)
add_executable(00573 00573/00573.cpp)